<resources>
    <string name="app_name">MultiUseApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Contact</string>
    <string name="menu_gallery">Weather</string>
    <string name="menu_slideshow">Scan QR Code</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_lbl">Login</string>
    <string name="register_lbl">Register</string>
    <string name="login_edi_lbl">Enter your email</string>
    <string name="nom_edi_lbl">Nom Contact</string>
    <string name="prenom_edi_lbl">Prenom Contact</string>
    <string name="num_edi_lbl">Numero Contact</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="pwd_hint_conf">Confirm your password</string>
    <string name="login_btn_txt">Login</string>
    <string name="register_txt_lbl">Register Here !</string>
    <string name="confirm_lbl">Please confirm your password</string>
    <string name="welcome_txt_v">Welcome :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_task_txt">Tasks</string>
    <string name="hint_task_name">Task name</string>
    <string name="hint_description_task">Task description</string>
    <string name="title_activity_tasks_fragment">Tasks</string>
    <string name="task_frag">Tasks</string>
    <string name="title_activity_maps2">Map</string>
</resources>