<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.multipurposeapp.LoginActivity">

    <TextView
        android:id="@+id/msg_error_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="casual"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="@color/app_gray"
        android:ems="10"
        android:hint="@string/login_edi_lbl"
        android:textColorHint="@color/app_gray"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:backgroundTint="@color/app_blue"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/app_gray">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_pwd_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="@color/app_gray"
        android:ems="10"

        android:hint="@string/pwd_hint"
        android:textColorHint="@color/app_gray"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/app_gray"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:backgroundTint="@color/app_blue"
            android:inputType="textPassword"
            android:textColor="@color/app_gray">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/my_button"
        android:text="@string/login_btn_txt"
        app:backgroundTint="@color/app_blue" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="cursive"
        android:text="@string/register_txt_lbl"
        android:textAllCaps="true"
        android:textColor="@color/app_blue"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>